# gmx_flow_utils

./: .gitignore  Changelog.md  README.md  average_flow_fields.py  gmx_flow.py  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg
gmx_flow/: __init__.py
gmx_flow/data/: write.py
gmx_flow/utils/: fileio.py
src/gmx_flow/: __init__.py
src/gmx_flow/data/: __init__.py  average.py  convert.py  gmxflow.py  read.py  supersample.py
src/gmx_flow/data/tests/: test_gmxflow.py  test_read.py
src/gmx_flow/flow/: __init__.py  average.py  convert.py  gmxflow.py  supersample.py
src/gmx_flow/flow/io/: input.py  output.py  utils.py
src/gmx_flow/flow/io/tests/: test_load.py  test_save.py
src/gmx_flow/flow/io/tests/test_files/: reference_0.npy
src/gmx_flow/flow/tests/: test_average.py  test_gmxflow.py
src/gmx_flow/utils/: __init__.py  argparse.py  fileio.py  graph.py
src/gmx_flow/utils/tests/: test_gen_files_from_range.py  test_loop_items.py
tests/: test_convert_flow_field_versions.py  test_get_files_from_range.py  test_get_files_or_range.py  test_read_gzipped_files.py
