[metadata]
# replace with your username:
name = gmx_flow
version = 0.1.0
author = Petter Johansson
description = Utilities for working with Gromacs Flow Field data
long_description = file: README.md
long_description_content_type = text/markdown
license = Blue Oak 1.0
url = https://github.com/pjohansson/gmx_flow_utils
classifiers =
    Programming Language :: Python :: 3
    License :: Blue Oak 1.0
    Operating System :: OS Independent

[options]
install_requires = numpy>=1.17
python_requires = >=3
scripts = 
    scripts/average_flow_fields.py
