[metadata]
# replace with your username:
name = gmx_flow
version = 0.2.1
author = Petter Johansson
description = Utilities for working with Gromacs Flow Field data
long_description = file: README.md
long_description_content_type = text/markdown
license = Blue Oak 1.0
url = https://github.com/pjohansson/gmx_flow_utils
classifiers =
    Programming Language :: Python :: 3
    License :: Blue Oak 1.0
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires = numpy>=1.20
python_requires = >=3.6

scripts = 
    src/bin/average_flow_fields.py
    src/bin/convert_gmx_flow_1_to_2.py

[options.packages.find]
where = src
