[metadata]
name = gmx_flow
version = 0.4.0-dev
author = Petter Johansson
description = Utilities for working with Gromacs Flow Field data
long_description = file: README.md
long_description_content_type = text/markdown
license = Blue Oak 1.0
url = https://github.com/pjohansson/gmx_flow_utils
classifiers =
    Programming Language :: Python :: 3
    License :: Blue Oak 1.0
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    numpy>=1.21
    scipy>1.7
    matplotlib>3.4
python_requires = >=3.10

scripts =
    src/bin/average_flow_fields.py
    src/bin/convert_gmx_flow_1_to_2.py
    src/bin/draw_flow_map.py
    src/bin/draw_flow_field.py
    src/bin/track_center_of_mass.py

[options.packages.find]
where = src
